# fcfBasis

./: .gitignore  .gitmodules  .pmngr  ArgPlaceHolder.hpp  CMakeLists.txt  Converter.hpp  DynamicIterator.hpp  Exception.hpp  FunctionSignature.hpp  IndexableFunction.hpp  InvariantCaller.hpp  Nop.hpp  PartCall.hpp  PartContainerAccess.hpp  PartConvert.hpp  PartException.hpp  PartForeach.hpp  PartMetaType.hpp  PartStaticVector.hpp  PartType.hpp  PartTypes.hpp  PartVariant.hpp  README.md  StaticVector.hpp  Template.hpp  TemplateSpecializationInitializer.hpp  Type.hpp  Variant.hpp  basis.hpp  call.hpp  convert.hpp  error.hpp  file.hpp  foreach.hpp  functions.hpp  index-002.html  index.html  iterator.hpp  macro.hpp  nativeType.hpp  (+2 more)
Details/: InvariantRangeCaller.hpp  InvariantRangeCallerA.hpp  InvariantSingleCaller.hpp  MaxTypesSize.hpp  TypeIndex.hpp  randomGenerator.hpp  typeStorage.hpp
Details/ArgPlaceHolder/: ArgInfoResolver.hpp  ArgResolver.hpp  ArgResolverImpl.hpp  CallerImpl.hpp  FunctionTypeBuilder.hpp  RemovePlaceHolderByIndex.hpp  RemovePlaceHolderByIndexImpl.hpp  SimpleArgResolver.hpp  TypeResolver.hpp  TypeResolverImpl.hpp
Details/Convert/: ConvertIndex.hpp  ConvertInitializer.hpp  Storage.hpp
Details/IndexableFunction/: SimpleCaller.hpp  Storage.hpp
Details/Specificator/: Registrator.hpp  Storage.hpp
Details/Variant/: BaseNobodyWrapper.hpp  BaseWrapper.hpp  NobodyWrapper.hpp  NobodyWrapperRegistrator.hpp  NobodyWrapperStorage.hpp  Storage.hpp  Wrapper.hpp
Template/: PackageArgResolver.hpp  Sequence.hpp  TupleInsert.hpp  TupleReplace.hpp
Template/Details/: TupleInsertImpl.hpp
bits/: BaseContainerType.hpp  BaseIndexIterator.hpp  BaseType.hpp  BasicIterator.hpp  IndexableFunctionInfo.hpp  IndexableFunctionRegistrator.hpp  IndexableFunctionSpace.hpp  SpecificatorTypeInfo.hpp  SpecificatorTypeRegistrator.hpp  TemplateSpecializationInitializer.hpp  TypeId.hpp  TypeIdSource.hpp  TypeInitializer.hpp  registry.hpp
bits/ArgPlaceHolder/: Arg.hpp  ArgNumber.hpp  Arguments.hpp  Caller.hpp  IsPlaceHolder.hpp  RemovePlaceHolder.hpp  Signature.hpp  SignatureData.hpp
bits/Call/: Arg.hpp  ArgNumber.hpp  Call.hpp  CallConversion.hpp  CallConversionMode.hpp  CallSeeker.hpp
bits/Convert/: ConvertFunction.hpp  ConvertInitializer.hpp  ConvertOptions.hpp  Converter.hpp  convert.hpp  convertRuntime.hpp  getConvertFunction.hpp
bits/DynamicIterator/: BaseDynamicIterator.hpp  DynamicIterator.hpp  DynamicIteratorPosition.hpp  ListDynamicIterator.hpp  MapDynamicIterator.hpp  SetDynamicIterator.hpp  VectorDynamicIterator.hpp
bits/Foreach/: Foreach.hpp
bits/PartCall/: Arg.hpp  ArgNumber.hpp  Call.hpp  CallArgument.hpp  CallArgumentOptions.hpp  CallCache.hpp  CallConversion.hpp  CallConversionMode.hpp  CallDetails.hpp  CallDetailsPack.hpp  CallOptions.hpp  CallSeeker.hpp  FunctionSignature.hpp  PartCall.hpp  callFunction.hpp
bits/PartCallPlaceHolder/: CallPlaceHolderArg.hpp  CallPlaceHolderArgEx.hpp  CallPlaceHolderInfo.hpp
bits/PartCallStorage/: CallStorage.hpp  CallStorageDefinition.hpp  CallStorageFunctionIndexes.hpp  CallStorageFunctionInfo.hpp  CallStorageFunctionInfoVector.hpp  CallStorageRegistrator.hpp  CallStorageSelectionFunctionGroup.hpp  CallStorageSelectionFunctionInfo.hpp  CallStorageSpace.hpp
bits/PartContainerAccess/: ContainerAccess.hpp  ContainerAccessDefinition.hpp  ContainerAccessInfo.hpp  ContainerPosition.hpp  Cursor.hpp  CursorSelector.hpp  DynamicContainerAccess.hpp  DynamicContainerAccessBase.hpp  DynamicContainerAccessDefinition.hpp  FlatCursor.hpp  ListIteratableCursor.hpp  MapIteratableCursor.hpp  PartContainerAccess.hpp  SetIteratableCursor.hpp  VariantCursor.hpp  VariantCursorDefinition.hpp
bits/PartConvert/: ConvertFunction.hpp  ConvertOptions.hpp  ConvertRegistration.hpp  ConvertRegistrationDefinition.hpp  ConvertSelector.hpp  Converter.hpp  ConverterRegistration.hpp  ConverterRegistrationDefinition.hpp  DefaultConvertMode.hpp  PartConvert.hpp  convert.hpp  convertRuntime.hpp  getConvertFunction.hpp
bits/PartException/: Exception.hpp  ExceptionDefinition.hpp  ExceptionPredefinition.hpp  PartException.hpp  exceptions.hpp
bits/PartForeach/: Foreach.hpp  (+2 more)
test/tests/: CMakeLists.txt  impl.cpp  macro.hpp  main.cpp
test/tests/PartCall/: Call.cpp  CallArgumentOptions.cpp  CallArgumentOptionsDim2.cpp  CallDeclare.cpp  CallDeep.cpp  CallExternalStorage.cpp  CallInvariantArguments.cpp  CallMacro.cpp  CallPlaceHolder.cpp  CallQuietOptions.cpp  CallResult.cpp  CallSpeed.cpp  CallWithIterations.cpp  CallZeroIterations.cpp
test/tests/PartContainerAccess/: ContainerAccess.cpp  DynamicContainerAccess.cpp
test/tests/PartException/: Exception.cpp  ExceptionMacro.cpp
test/tests/PartForeach/: foreach.cpp
test/tests/PartMetaType/: MetaTypeModifyTuple.cpp  MetaTypeSequence.cpp
test/tests/PartSpecificator/: ArithmeticSpecificators.cpp  MinMaxSpecificator.cpp
test/tests/PartSpecifier/: ArithmeticSpecifiers.cpp  MinMaxSpecifier.cpp
test/tests/PartStaticVector/: StaticVector.cpp  StaticVectorCopy.cpp  StaticVectorErase.cpp  StaticVectorException.cpp  StaticVectorInsert.cpp  StaticVectorIterator.cpp  StaticVectorNotReduce.cpp  StaticVectorPush.cpp
test/tests/PartType/: TypeIndex.cpp
test/tests/PartVariant/: Variant.cpp  VariantArithmeticTest.cpp  VariantAssignmentTest.cpp  VariantCmpTest.cpp  VariantConstTest.cpp  VariantConstructor.cpp  VariantContainerTest.cpp  VariantEraseTest.cpp  VariantPtrTest.cpp  VariantRefTest.cpp
test/tests/StaticVector/: StaticVector.cpp  StaticVectorCopy.cpp  StaticVectorErase.cpp  StaticVectorException.cpp  StaticVectorInsert.cpp  StaticVectorIterator.cpp  StaticVectorNotReduce.cpp  StaticVectorPush.cpp
test/tests/Template/: Sequence.cpp
test/tests/bits/: fill.hpp  functions.hpp  random.hpp
test/tests/call/: declareCall.cpp  placeHolderCall.cpp
test/tests/index/: deepIndexCall.cpp  deepIndexCallCaller.cpp  deepIndexCallInner.cpp  deepIndexSimpleCall.cpp  types.cpp
test/tests/iterator/: dynamicIterator.cpp  iterator.cpp
test/tests/specificator/: MinMaxSpecificator.cpp
test/tests/variant/: variant.cpp
(+219 files in other folders)
